# dio-delivery-quality-engine

./: .gitignore  README.md  pyproject.toml
dio_delivery_quality_engine/: __init__.py  analyzer.py  carrier_switch.py  cli.py  config.py  core.py  erp_source.py  io.py  recommendation_mailer.py  remote_area.py  store.py
examples/: analysis_rules_40d.json  cj_remote_area_zip_ranges.csv  management_remote_area_zip_ranges.csv  sample_erp.json
tests/: test_analyzer.py  test_carrier_switch_store.py  test_erp_source.py  test_recommendation_mailer.py  test_remote_area.py  test_store.py
